force-app/main/default/objects/Advance__c/Advance__c.object-meta.xml
<CustomObject>
    <label>Advance</label>
    <nameField>
        <displayFormat>ADV-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>