force-app/main/default/objects/Advance__c/fields/Accounting_Note__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounting Note</label>
    <referenceTo>Accounting_Notes__c</referenceTo>
    <relationshipLabel>Advances</relationshipLabel>
    <relationshipName>Advances</relationshipName>
    <type>Lookup</type>
</CustomField>