force-app/main/default/objects/Advance__c/fields/Advance_Offset_No__c.field-meta.xml
<CustomField>
    <fullName>Advance_Offset_No__c</fullName>
    <externalId>true</externalId>
    <label>Advance Offset No</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>