force-app/main/default/objects/Advance__c/fields/Advance_Type__c.field-meta.xml
<CustomField>
    <fullName>Advance_Type__c</fullName>
    <label>Advance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NORMAL</fullName>
            </value>
            <value>
                <fullName>STAR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>