force-app/main/default/objects/Advance__c/fields/Reserve_For_Customer__c.field-meta.xml
<CustomField>
    <fullName>Reserve_For_Customer__c</fullName>
    <label>Reserve For Customer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>