force-app/main/default/objects/Advance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Advance_No__c</columns>
    <columns>Advance_Offset_No__c</columns>
    <columns>Accounting_Note__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>